# achronyme-core

./: .gitignore  CHANGELOG.md  Cargo.toml  DSP_MODULE_IMPLEMENTATION.md  PHASE4I_IMPLEMENTATION_REPORT.md  README.md  bash.exe.stackdump  test_all_examples.ps1  test_debug.rs  test_factorial_debug.txt  test_output.txt  test_rec_simple.rs
.github/workflows/: ci.yml  lsp-release.yml
crates/achronyme-cli/: Cargo.toml
crates/achronyme-cli/src/: formatting.rs  lib.rs  lint.rs  lsp_completer.rs  main.rs  repl_helper.rs  symbols.rs
crates/achronyme-dsp/: Cargo.toml
crates/achronyme-env/: Cargo.toml
crates/achronyme-env/src/: serialize.rs
crates/achronyme-eval/: Cargo.toml
crates/achronyme-eval/src/: constants.rs
crates/achronyme-eval/tests/: test_break_continue.rs  test_broadcasting.rs  test_compound_assignment.rs  test_default_params.rs  test_destructuring.rs  test_for_in_iteration.rs  test_generators.rs  test_ieee754.rs  test_interpolated_strings.rs  test_optional_fields.rs  test_optional_params.rs  test_range_operator.rs  test_short_circuit.rs  test_type_export_import.rs
crates/achronyme-gui/: Cargo.toml
crates/achronyme-gui/src/: bridge.rs  components.rs  layout.rs  lib.rs  runner.rs  style.rs
crates/achronyme-linalg/: Cargo.toml
crates/achronyme-lsp/: Cargo.toml  README.md
crates/achronyme-lsp-core/: Cargo.toml
crates/achronyme-lsp-core/src/: completion.rs  lib.rs  signatures.rs
crates/achronyme-lsp/src/: capabilities.rs  document.rs  main.rs  server.rs
crates/achronyme-numerical/: Cargo.toml
crates/achronyme-parser/: Cargo.toml
crates/achronyme-parser/src/: ast.rs  grammar.pest  lib.rs  pest_parser.rs  type_annotation.rs
crates/achronyme-parser/tests/: test_default_params_parsing.rs  test_destructuring_parsing.rs  test_import_export_parsing.rs  test_mutability_parsing.rs  test_newline_separation.rs  (+1 more)
crates/achronyme-render/: Cargo.toml
crates/achronyme-render/examples/: demo.rs  wgpu_demo.rs
crates/achronyme-render/src/: events.rs  layout.rs  lib.rs  node.rs  render.rs  style.pest  style_parser.rs  text.rs  wgpu_renderer.rs
crates/achronyme-render/src/shaders/: line.wgsl  rect.wgsl  text.wgsl
crates/achronyme-solver/: Cargo.toml
crates/achronyme-types/: Cargo.toml
crates/achronyme-vm/: Cargo.toml  test_factorial_bytecode.rs
crates/achronyme-vm/src/: bytecode.rs  bytecode_debug.rs  compiler.rs  error.rs  lib.rs  opcode.rs  tests.rs  value.rs  vm.rs
crates/achronyme-vm/src/builtins/: array_advanced.rs  async_ops.rs  complex.rs  concurrency.rs  debug.rs  dsp.rs  encoding.rs  env.rs  graph.rs  gui.rs  hof.rs  io.rs  linalg.rs  math.rs  mod.rs  module_system.rs  net.rs  numerical.rs  pert.rs  reactive.rs  records.rs  registry.rs  render_gui.rs  statistics.rs  string.rs  utils.rs  vector.rs
crates/achronyme-vm/src/compiler/: constants.rs  context.rs  mod.rs  patterns.rs  registers.rs  statements.rs  symbols.rs
crates/achronyme-vm/src/compiler/expressions/: access.rs  control.rs  functions.rs  generators.rs  literals.rs  mod.rs  operators.rs  variables.rs
crates/achronyme-vm/src/tests/: array_advanced_integration.rs  builtins.rs  main_tests.rs  mod.rs
crates/achronyme-vm/src/tests/vm_integration_tests/: async_await.rs  basic_operations.rs  complex_numbers.rs  concurrency.rs  control_flow.rs  data_structures.rs  exceptions.rs  functions.rs  generators.rs  gradual_types.rs  helpers.rs  mod.rs  operators.rs  pattern_matching.rs  reactive.rs  tco.rs
crates/achronyme-vm/src/vm/: frame.rs  generator.rs  iterator.rs  mod.rs  ops.rs  result.rs
crates/achronyme-vm/src/vm/execution/: arithmetic.rs  builtins.rs  comparison.rs  control.rs  exceptions.rs  functions.rs  generators.rs  hof.rs  iterators.rs  matching.rs  mod.rs  records.rs  types.rs  variables.rs  vectors.rs
crates/achronyme-vm/src/vm/intrinsics/: generator.rs  mod.rs
docs/: builtin-plan.md
docs/changelog/: v0.6.3.md  v0.6.4.md  v0.6.5.md  v0.6.6.md
docs/design/: COMPATIBILITY_TESTING.md  GUI_FRAMEWORK_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PHASE4.md  PHASE4_BUILTIN_FUNCTIONS_REFERENCE.md  PHASE4_IMPLEMENTATION_SUMMARY.md  architecture-debt-gui-async.md  layout-strategy-plan.md  migration-plan-arc-rwlock.md  native-ui-engine-roadmap.md  utilities.md  vm-architecture-design.md  vm-phase1-completion-summary.md  vm-phase2-completion-summary.md  vm-thread-safety-migration.md
docs/language/: 00-index.md  05-variables.md  06-functions.md  07-records.md  20-strings.md  29-while-loops.md  36-pattern-matching.md  37-destructuring.md  38-generators.md  39-loop-control.md  README.md
docs/lsp/: README.md
examples/: phase4-destructuring-demo.acr  phase4b-match-demo.acr  phase4c-rest-patterns-demo.acr  phase4d-default-values-demo.acr  phase5-generators-basic.acr
examples/server/: simple_api.php
examples/soc/: 00-recursive-fac.soc  01-vector-operations.soc  02-dsp-pipeline.soc  03-numerical-diff.soc  05-numerical-calculus-suite.soc  06-conditionals.soc  06-numerical-calculus-suite.soc  07-piecewise.soc  08-piecewise-analysis.soc  09-complex.soc  10-complex-validation.soc  11-scope-tests.soc  13-strings-demo.soc  15-conditionals.soc  18-advanced-recursion-patterns.soc  19-if-else-complete.soc  23-generator-type.soc  24-intrinsic-methods.soc  25-optional-parameting.soc  26-async-await.soc  27-concurrency-primitives.soc  28-comprehensive-demo.soc  30-native-gui.soc  31-native-plot.soc  32-reactive-gui.soc  33-sine-wave.soc  34-gui-controls.soc  35-gui-lifecycle.soc  36-file-io.soc  36-interactive-controls.soc  37-encoding.soc  37-reactive-controls.soc  38-button-test.soc  38-http.soc  39-local-server.soc  40-env-vars.soc  40-gui-async-integration.soc  41-types-and-iterators.soc  demo-lambda-improvements.soc  test-call-register-fix.soc  (+44 more)
tests/: README.md  compatibility.rs  run_compatibility_tests.sh  test_corpus.rs
tests/compatibility/: mod.rs
tests/corpus/: array_operations.ach  basic_arithmetic.ach  closures.ach  conditionals.ach  factorial.ach  fibonacci.ach  iterator-protocol.soc  loops.ach  map_filter.ach  nested_functions.ach  records.ach
(+111 files in other folders)
