[package]
name = "achronyme-cli"
version = "0.6.4"
edition = "2021"

[[bin]]
name = "achronyme"
path = "src/main.rs"

[dependencies]
achronyme-parser = { path = "../achronyme-parser" }
achronyme-vm = { path = "../achronyme-vm" }
achronyme-types = { path = "../achronyme-types" }
achronyme-lsp-core = { path = "../achronyme-lsp-core" }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.10"
once_cell = "1.18"
