[package]
name = "achronyme-cli"
version = "0.6.5"
edition = "2021"

[[bin]]
name = "achronyme"
path = "src/main.rs"

[dependencies]
achronyme-parser = { path = "../achronyme-parser", version = "0.6.5" }
achronyme-vm = { path = "../achronyme-vm", version = "0.6.5" }
achronyme-types = { path = "../achronyme-types", version = "0.6.5" }
achronyme-lsp-core = { path = "../achronyme-lsp-core", version = "0.1.0" }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.10"
once_cell = "1.18"
tokio = { version = "1.48.0", features = ["full"] }
