[package]
name = "achronyme-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
achronyme-types = { path = "../achronyme-types" }
eframe = "0.30.0"
egui = "0.30.0"
egui_plot = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
csscolorparser = "0.6"

[dev-dependencies]