[package]
name = "achronyme-render"
version = "0.1.0"
edition = "2021"
description = "Achronyme UI Engine - Retained mode UI with Flexbox layout"

[features]
default = ["wgpu-backend"]
wgpu-backend = ["wgpu", "pollster", "bytemuck"]
software-backend = ["softbuffer"]

[dependencies]
winit = "0.30"
taffy = "0.5"
slotmap = "1.0"  # Efficient node storage with stable IDs
pest = "2.7"
pest_derive = "2.7"
fontdue = "0.9"  # Lightweight font rasterization

# GPU rendering (default)
wgpu = { version = "23", optional = true }
pollster = { version = "0.4", optional = true }  # Block on async for wgpu init
bytemuck = { version = "1.14", features = ["derive"], optional = true }  # Safe casting for GPU buffers

# Software rendering (fallback)
softbuffer = { version = "0.4", optional = true }
