[package]
name = "achronyme-vm"
version = "0.6.5"
edition = "2021"
authors = ["Achronyme Team"]
description = "Bytecode Virtual Machine for the Achronyme programming language"
license = "MIT"

[dependencies]
# Core dependencies
achronyme-parser = { path = "../achronyme-parser" }
achronyme-types = { path = "../achronyme-types" }
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
