[package]
name = "achronyme-vm"
version = "0.6.6"
edition = "2021"
authors = ["Achronyme Team"]
description = "Bytecode Virtual Machine for the Achronyme programming language"
license = "MIT"

[dependencies]
# Core dependencies
achronyme-parser = { path = "../achronyme-parser" }
achronyme-types = { path = "../achronyme-types" }
achronyme-gui = { path = "../achronyme-gui" }
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
serde.workspace = true
serde_json.workspace = true
csv = "1.4.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }

[dev-dependencies]
criterion = "0.5"
